feat(api): ✨ 重构框架服务模块并引入DTO模式
重构框架服务模块，引入DTO/VO模式进行数据传输解耦，主要变更包括：

1. 新增FrameServiceDTO数据传输对象，包含服务核心字段
2. 新增FrameServiceVO视图对象，包含前端展示所需字段
3. 新增FrameServiceConverter转换器，实现DTO/Entity/VO互转
4. 重构FrameServiceController使用DTO接收请求，VO返回响应
5. 重构FrameServiceService返回DTO对象并优化业务逻辑
6. 增强删除操作的安全性检查和文件清理

此次重构遵循三层架构规范，实现了服务层的职责分离，提升了代码可维护性和前后端交互的一致性。

Signed-off-by: 任相鹏 <renxiangpeng@norinaviation.com>