@@ -17,148 +17,273 @@
 
 package com.datasophon.api.service.impl;
 
+import cn.hutool.core.util.StrUtil;
+import com.datasophon.api.converter.FrameServiceConverter;
 import com.datasophon.api.service.ClusterInfoService;
 import com.datasophon.api.service.ClusterServiceInstanceService;
 import com.datasophon.api.service.FrameServiceService;
-import com.datasophon.dao.entity.ClusterInfoEntity;
+import com.datasophon.common.dto.ClusterInfoDTO;
+import com.datasophon.common.dto.FrameServiceDTO;
+import com.datasophon.common.exception.BusinessException;
 import com.datasophon.dao.entity.ClusterServiceInstanceEntity;
 import com.datasophon.dao.entity.FrameInfoEntity;
 import com.datasophon.dao.entity.FrameServiceEntity;
 import com.datasophon.dao.enums.ServiceState;
 import com.datasophon.dao.mapper.FrameInfoMapper;
 import com.datasophon.dao.mapper.FrameServiceMapper;
-import org.springframework.beans.factory.annotation.Autowired;
+import com.mybatisflex.core.query.QueryChain;
+import com.mybatisflex.spring.service.impl.ServiceImpl;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 
+import static com.datasophon.dao.entity.table.FrameServiceEntityTableDef.FRAME_SERVICE_ENTITY;
+
 /**
- * 集群框架版本服务表实现
+ * 集群框架版本服务表服务实现
+ * 继承ServiceImpl提供基础CRUD操作，使用Converter进行对象转换
+ * 保持复杂业务逻辑完整性，按照架构重构规范返回DTO对象
  *
  * @author 任相鹏
  * @email 635887935@qq.com
- * @date 2024-12-19
+ * @date 2025-08-04
  */
+@Slf4j
 @Service("frameServiceService")
-public class FrameServiceServiceImpl implements FrameServiceService {
+@RequiredArgsConstructor
+public class FrameServiceServiceImpl extends ServiceImpl<FrameServiceMapper, FrameServiceEntity>
+        implements FrameServiceService {
 
-    @Autowired
-    private ClusterInfoService clusterInfoService;
+    private final FrameServiceConverter frameServiceConverter;
+    private final ClusterInfoService clusterInfoService;
+    private final FrameInfoMapper frameInfoMapper;
+    private final ClusterServiceInstanceService serviceInstanceService;
 
-    @Autowired
-    private FrameInfoMapper frameInfoMapper;
-
-    @Autowired
-    private ClusterServiceInstanceService serviceInstanceService;
-
-    @Autowired
-    private FrameServiceMapper frameServiceMapper;
-
-    private static final List<String> CUSTOM_REQUIRED_SERVICE = Arrays.asList(
+    private static final List<String> CUSTOM_REQUIRED_SERVICE = List.of(
             "ALERTMANAGER", "GRAFANA", "OPENLDAP", "PROMETHEUS", "RANGER");
 
-    private static final List<String> DATALAKE_REQUIRED_SERVICE = Arrays.asList(
+    private static final List<String> DATALAKE_REQUIRED_SERVICE = List.of(
             "ALERTMANAGER", "GRAFANA", "OPENLDAP", "PROMETHEUS", "RANGER", "HDFS", "YARN", "HUDI", "HIVE", "ICEBERG",
             "SPARK3", "FLINK");
 
     @Override
-    public List<FrameServiceEntity> getAllFrameService(Integer clusterId) {
-        ClusterInfoEntity clusterInfo = clusterInfoService.getById(clusterId);
+    public List<FrameServiceDTO> getAllFrameService(Integer clusterId) {
+        if (clusterId == null) {
+            throw new BusinessException("集群ID不能为空");
+        }
+
+        ClusterInfoDTO clusterInfo = clusterInfoService.getClusterById(clusterId);
         if (clusterInfo == null) {
-            throw new RuntimeException("Cluster not found with id: " + clusterId);
-        }
-        FrameInfoEntity frameInfo = frameInfoMapper.getFrameInfoByFrameCode(clusterInfo.getClusterFrame());
-        if (frameInfo == null) {
-            throw new RuntimeException("Frame info not found for cluster frame: " + clusterInfo.getClusterFrame());
+            throw new BusinessException("未找到ID为 " + clusterId + " 的集群信息");
         }
 
-        List<FrameServiceEntity> list = frameServiceMapper.selectByFrameIdOrderBySortNum(frameInfo.getId());
-        setInstalled(clusterId, list);
-        return list;
+        FrameInfoEntity frameInfo = frameInfoMapper.getFrameInfoByFrameCode(clusterInfo.clusterFrame());
+        if (frameInfo == null) {
+            throw new BusinessException("未找到框架代码为 " + clusterInfo.clusterFrame() + " 的框架信息");
+        }
+
+        List<FrameServiceEntity> entities = getMapper().selectByFrameIdOrderBySortNum(frameInfo.getId());
+        List<FrameServiceDTO> dtos = frameServiceConverter.entityListToDtoList(entities);
+
+        return setInstalledStatus(clusterId, dtos);
     }
 
     @Override
-    public List<FrameServiceEntity> getAllFrameServiceWithRequired(Integer clusterId, String type) {
-        ClusterInfoEntity clusterInfo = clusterInfoService.getById(clusterId);
+    public List<FrameServiceDTO> getAllFrameServiceWithRequired(Integer clusterId, String type) {
+        if (clusterId == null) {
+            throw new BusinessException("集群ID不能为空");
+        }
+        if (StrUtil.isBlank(type)) {
+            throw new BusinessException("集群类型不能为空");
+        }
+
+        ClusterInfoDTO clusterInfo = clusterInfoService.getClusterById(clusterId);
         if (clusterInfo == null) {
-            throw new RuntimeException("Cluster not found with id: " + clusterId);
+            throw new BusinessException("未找到ID为 " + clusterId + " 的集群信息");
         }
-        FrameInfoEntity frameInfo = frameInfoMapper.getFrameInfoByFrameCode(clusterInfo.getClusterFrame());
+
+        FrameInfoEntity frameInfo = frameInfoMapper.getFrameInfoByFrameCode(clusterInfo.clusterFrame());
         if (frameInfo == null) {
-            throw new RuntimeException("Frame info not found for cluster frame: " + clusterInfo.getClusterFrame());
+            throw new BusinessException("未找到框架代码为 " + clusterInfo.clusterFrame() + " 的框架信息");
         }
 
-        List<FrameServiceEntity> list = frameServiceMapper.selectByFrameIdOrderBySortNum(frameInfo.getId());
-        setInstalled(clusterId, list);
-        setRequired(list, type);
-        return list;
+        List<FrameServiceEntity> entities = getMapper().selectByFrameIdOrderBySortNum(frameInfo.getId());
+        List<FrameServiceDTO> dtos = frameServiceConverter.entityListToDtoList(entities);
+
+        dtos = setInstalledStatus(clusterId, dtos);
+        return setRequiredStatus(dtos, type);
     }
 
-    private void setRequired(List<FrameServiceEntity> list, String type) {
-        List<String> requireService = "custom".equals(type) ? CUSTOM_REQUIRED_SERVICE : DATALAKE_REQUIRED_SERVICE;
-        for (FrameServiceEntity frameServiceEntity : list) {
-            frameServiceEntity.setIsRequired(requireService.contains(frameServiceEntity.getServiceName()));
+    /**
+     * 设置服务的必需状态 - DTO级别操作
+     */
+    private List<FrameServiceDTO> setRequiredStatus(List<FrameServiceDTO> dtos, String type) {
+        List<String> requiredServices = "custom".equals(type) ? CUSTOM_REQUIRED_SERVICE : DATALAKE_REQUIRED_SERVICE;
+
+        return dtos.stream()
+                .map(dto -> dto.withRequired(requiredServices.contains(dto.serviceName())))
+                .toList();
+    }
+
+    /**
+     * 设置服务的安装状态 - DTO级别操作
+     */
+    private List<FrameServiceDTO> setInstalledStatus(Integer clusterId, List<FrameServiceDTO> dtos) {
+        return dtos.stream()
+                .map(dto -> {
+                    ClusterServiceInstanceEntity serviceInstance = serviceInstanceService
+                            .getServiceInstanceByClusterIdAndServiceName(clusterId, dto.serviceName());
+                    boolean installed = Objects.nonNull(serviceInstance)
+                            && !serviceInstance.getServiceState().equals(ServiceState.WAIT_INSTALL);
+                    return dto.withInstalled(installed);
+                })
+                .toList();
+    }
+
+    @Override
+    public List<FrameServiceDTO> getServiceListByServiceIds(List<Integer> serviceIds) {
+        if (serviceIds == null || serviceIds.isEmpty()) {
+            return List.of();
         }
+
+        List<FrameServiceEntity> entities = getMapper().selectByIds(serviceIds);
+        return frameServiceConverter.entityListToDtoList(entities);
     }
 
-    private void setInstalled(Integer clusterId, List<FrameServiceEntity> list) {
-        for (FrameServiceEntity serviceEntity : list) {
-            ClusterServiceInstanceEntity serviceInstance = serviceInstanceService
-                    .getServiceInstanceByClusterIdAndServiceName(clusterId, serviceEntity.getServiceName());
-            serviceEntity.setInstalled(Objects.nonNull(serviceInstance)
-                    && !serviceInstance.getServiceState().equals(ServiceState.WAIT_INSTALL));
+    @Override
+    public FrameServiceDTO getServiceByFrameIdAndServiceName(Integer frameId, String serviceName) {
+        if (frameId == null) {
+            throw new BusinessException("框架ID不能为空");
         }
+        if (StrUtil.isBlank(serviceName)) {
+            throw new BusinessException("服务名称不能为空");
+        }
+
+        FrameServiceEntity entity = getMapper().selectByFrameIdAndServiceName(frameId, serviceName);
+        if (entity == null) {
+            throw new BusinessException("未找到框架ID为 " + frameId + " 且服务名称为 " + serviceName + " 的服务信息");
+        }
+
+        return frameServiceConverter.entityToDto(entity);
     }
 
     @Override
-    public List<FrameServiceEntity> getServiceListByServiceIds(List<Integer> serviceIds) {
-        return frameServiceMapper.selectByIds(serviceIds);
+    public FrameServiceDTO getServiceByFrameCodeAndServiceName(String frameCode, String serviceName) {
+        if (StrUtil.isBlank(frameCode)) {
+            throw new BusinessException("框架代码不能为空");
+        }
+        if (StrUtil.isBlank(serviceName)) {
+            throw new BusinessException("服务名称不能为空");
+        }
+
+        FrameServiceEntity entity = getMapper().selectByFrameCodeAndServiceName(frameCode, serviceName);
+        if (entity == null) {
+            throw new BusinessException("未找到框架代码为 " + frameCode + " 且服务名称为 " + serviceName + " 的服务信息");
+        }
+
+        return frameServiceConverter.entityToDto(entity);
     }
 
     @Override
-    public FrameServiceEntity getServiceByFrameIdAndServiceName(Integer frameId, String serviceName) {
-        return frameServiceMapper.selectByFrameIdAndServiceName(frameId, serviceName);
+    public List<FrameServiceDTO> getAllFrameServiceByFrameCode(String frameCode) {
+        if (StrUtil.isBlank(frameCode)) {
+            throw new BusinessException("框架代码不能为空");
+        }
+
+        List<FrameServiceEntity> entities = getMapper().selectByFrameCode(frameCode);
+        return frameServiceConverter.entityListToDtoList(entities);
     }
 
     @Override
-    public FrameServiceEntity getServiceByFrameCodeAndServiceName(String clusterFrame, String serviceName) {
-        return frameServiceMapper.selectByFrameCodeAndServiceName(clusterFrame, serviceName);
+    public List<FrameServiceDTO> listServices(String serviceIds) {
+        if (StrUtil.isBlank(serviceIds)) {
+            return List.of();
+        }
+
+        var ids = Arrays.stream(serviceIds.split(","))
+                .filter(StrUtil::isNotBlank)
+                .toList();
+
+        if (ids.isEmpty()) {
+            return List.of();
+        }
+
+        List<FrameServiceEntity> entities = getMapper().selectByStringIds(ids);
+        return frameServiceConverter.entityListToDtoList(entities);
     }
 
     @Override
-    public List<FrameServiceEntity> getAllFrameServiceByFrameCode(String clusterFrame) {
-        return frameServiceMapper.selectByFrameCode(clusterFrame);
+    public FrameServiceDTO getFrameServiceById(Integer id) {
+        if (id == null) {
+            throw new BusinessException("服务ID不能为空");
+        }
+
+        FrameServiceEntity entity = getById(id);
+        if (entity == null) {
+            throw new BusinessException("未找到ID为 " + id + " 的服务信息");
+        }
+
+        return frameServiceConverter.entityToDto(entity);
     }
 
     @Override
-    public List<FrameServiceEntity> listServices(String serviceIds) {
-        List<String> ids = Arrays.stream(serviceIds.split(",")).collect(java.util.stream.Collectors.toList());
-        return frameServiceMapper.selectByStringIds(ids);
-    }
+    public FrameServiceDTO saveFrameService(FrameServiceDTO frameServiceDTO) {
+        if (frameServiceDTO == null) {
+            throw new BusinessException("服务信息不能为空");
+        }
 
-    // 标准CRUD方法实现
-    @Override
-    public FrameServiceEntity getById(Integer id) {
-        return frameServiceMapper.selectById(id);
-    }
+        FrameServiceEntity entity = frameServiceConverter.dtoToEntity(frameServiceDTO);
+        boolean result = save(entity);
 
-    @Override
-    public FrameServiceEntity save(FrameServiceEntity entity) {
-        frameServiceMapper.insert(entity);
-        return entity;
-    }
+        if (!result) {
+            throw new BusinessException("保存服务信息失败");
+        }
 
-    @Override
-    public FrameServiceEntity updateById(FrameServiceEntity entity) {
-        frameServiceMapper.updateById(entity);
-        return entity;
+        return frameServiceConverter.entityToDto(entity);
     }
 
     @Override
-    public boolean removeByIds(List<Integer> ids) {
-        return frameServiceMapper.deleteByIds(ids) > 0;
+    public FrameServiceDTO updateFrameService(FrameServiceDTO frameServiceDTO) {
+        if (frameServiceDTO == null || frameServiceDTO.id() == null) {
+            throw new BusinessException("服务信息或ID不能为空");
+        }
+
+        // 检查记录是否存在
+        FrameServiceEntity existingEntity = getById(frameServiceDTO.id());
+        if (existingEntity == null) {
+            throw new BusinessException("未找到ID为 " + frameServiceDTO.id() + " 的服务信息");
+        }
+
+        FrameServiceEntity entity = frameServiceConverter.dtoToEntity(frameServiceDTO);
+        boolean result = updateById(entity);
+
+        if (!result) {
+            throw new BusinessException("更新服务信息失败");
+        }
+
+        return frameServiceConverter.entityToDto(entity);
+    }
+
+    @Override
+    public boolean removeFrameServiceByIds(List<Integer> ids) {
+        if (ids == null || ids.isEmpty()) {
+            throw new BusinessException("删除的ID列表不能为空");
+        }
+
+        return removeByIds(ids);
+    }
+
+    @Override
+    public boolean removeFrameServiceById(Integer id) {
+        if (id == null) {
+            throw new BusinessException("服务ID不能为空");
+        }
+
+        return removeById(id);
     }
 
 }
